Adjust code style recommended by idle